# msci

./: .gitignore  .gitmodules  README.md  combinedsim.py  hough.py  preprocessing.py  pyproject.toml
DetectorSim/: Detector.py  Panel.py  README.md
TrackSim/: .gitignore  README.md  pyproject.toml  ruff.toml
TrackSim/tracksim/: cachedrng.py  consts.py  gen.py  main.py  plotting.py
TrackSim/tracksim/test/: test_average_dist.py  test_plotting.py
