[tool.poetry]
name = "combinedsim"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
numpy = "^1.26.1"
pandas = "^2.1.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pyqt5 = "5.15.10"
pyqt5-qt5 = "5.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
