[tool.poetry]
name = "tracksim"
version = "0.1.0"
description = "Simulation of a simplified particle gun, track generator."
authors = ["Hector Brown <hector.brown20@imperial.ac.uk>", "Trystan Coveney <trystan.coveney19@imperial.ac.uk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pyqt5 = "5.15.10"
pyqt5-qt5 = "5.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
